<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_bt_stack</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Part 6: PointCloud2 (/livox/lidar) -> LaserScan (/scan) for AMCL/costmaps -->
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <!-- Part 7: hdas_msg/Imu -> sensor_msgs/Imu translator + robot_localization EKF -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>hdas_msg</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <!-- slam_launch.py: build a map with slam_toolbox while driving via teleop -->
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
